feat: POST endpoint for borrowing book
